serer handler docs
